--- a/tourPrj/src/main/resources/egovframework/egovProps/globals_prod.properties
+++ b/tourPrj/src/main/resources/egovframework/egovProps/globals_prod.properties
@@ -26,7 +26,7 @@ Globals.Password = tourPrj123
 
 #mysql
 Globals.DriverClassName = net.sf.log4jdbc.DriverSpy
-Globals.Url = jdbc:oracle:thin:@tourPrj_high?TNS_ADMIN=C://eGovFrameDev-4.2.0-64bit/bin/Wallet_tourPrj
+Globals.Url = jdbc:oracle:thin:@tourPrj_high?TNS_ADMIN=/prj/apache-tomcat-9.0.89/Wallet_tourPrj
 
 #oracle
 #Globals.DriverClassName=oracle.jdbc.driver.OracleDriver
