--- a/tourPrj/src/main/resources/egovframework/egovProps/globals_prod.properties
+++ b/tourPrj/src/main/resources/egovframework/egovProps/globals_prod.properties
@@ -25,12 +25,12 @@ Globals.UserName = iteyes
 Globals.Password = tourPrj123
 
 #mysql
-Globals.DriverClassName = net.sf.log4jdbc.DriverSpy
-Globals.Url = jdbc:oracle:thin:@tourPrj_high?TNS_ADMIN=/prj/apache-tomcat-9.0.89/Wallet_tourPrj
+#Globals.DriverClassName = net.sf.log4jdbc.DriverSpy
+#Globals.Url = jdbc:oracle:thin:@tourPrj_high?TNS_ADMIN=/prj/apache-tomcat-9.0.89/Wallet_tourPrj
 
 #oracle
-#Globals.DriverClassName=oracle.jdbc.driver.OracleDriver
-#Globals.Url=jdbc:oracle:thin:@127.0.0.1:1521:xe
+Globals.DriverClassName=oracle.jdbc.driver.OracleDriver
+Globals.Url=jdbc:oracle:thin:@tourPrj_high?TNS_ADMIN=/prj/apache-tomcat-9.0.89/Wallet_tourPrj
 
 #Altibase
 #Globals.DriverClassName=Altibase.jdbc.driver.AltibaseDriver
