--- a/tourPrj/src/main/resources/egovframework/egovProps/globals_local.properties
+++ b/tourPrj/src/main/resources/egovframework/egovProps/globals_local.properties
@@ -54,3 +54,8 @@ Globals.fileUpload.Extensions = .gif.jpg.jpeg.png.xls.xlsx
 # File ID \uc554\ud638\ud654 \ud0a4
 # \uc8fc\uc758 : \ubc18\ub4dc\uc2dc \uae30\ubcf8\uac12 "egovframe"\uc744 \ub2e4\ub978\uac83\uc73c\ub85c \ubcc0\uacbd\ud558\uc5ec \uc0ac\uc6a9\ud558\uc2dc\uae30 \ubc14\ub78d\ub2c8\ub2e4.
 Globals.File.algorithmKey = egovframe
+
+
+Globals.openData.endPoint=http://apis.data.go.kr/B551011/KorService1
+Globals.openData.secretkey=YyXrTq%2FZNXZidvKZ2CBkdy3PIFh0ZyGKvmceLhiwQjVsoAlFrxRR%2BYujoqhfbs2Ce3fyzehfXA7LfWhQzfjMoQ%3D%3D
+
