--- a/tourPrj/pom.xml
+++ b/tourPrj/pom.xml
@@ -228,7 +228,33 @@
 			<artifactId>quartz-jboss</artifactId>
 			<version>2.1.7</version>
 		</dependency>
-
+		
+		<!-- https://mvnrepository.com/artifact/org.json/json -->
+		<dependency>
+		    <groupId>org.json</groupId>
+		    <artifactId>json</artifactId>
+		    <version>20240303</version>
+		</dependency>
+		
+		<dependency>
+		    <groupId>com.googlecode.json-simple</groupId>
+		    <artifactId>json-simple</artifactId>
+		    <version>1.1.1</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.9.9</version>
+		</dependency>
+		
+		<dependency>			
+			<groupId>org.codehaus.jackson</groupId>			
+			<artifactId>jackson-mapper-asl</artifactId>			
+			<version>1.5.0</version>		
+		</dependency>
+		
+		
 	</dependencies>
 
     <build>
